--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "node dist/index.js",
     "lint": "eslint src/**/*js",
-    "build": "babel src --out-dir dist"
+    "build": "babel src --out-dir dist",
+    "clean": "rimraf dist",
+    "restart": "npm run clean && npm run build && npm run start",
+    "dev": "nodemon --ignore dist --exec npm run restart"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +26,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-prettier": "^3.4.0",
-    "prettier": "^2.3.2"
+    "nodemon": "^2.0.12",
+    "prettier": "^2.3.2",
+    "rimraf": "^3.0.2"
   }
 }
