--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,10 +3,11 @@
     "es2021": true,
     "node": true
   },
-  "extends": ["airbnb-base", "prettier"],
   "plugins": [
-    "prettier"
+    "prettier",
+    "functional"
   ],
+  "extends": ["airbnb-base", "prettier", "plugin:functional/lite"],
   "parserOptions": {
     "ecmaVersion": 12,
     "sourceType": "module"
