--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,15 @@
 {
   "env": {
     "es2021": true,
-    "node": true
+    "node": true,
+    "jest/global": true
   },
   "plugins": [
     "prettier",
-    "functional"
+    "functional",
+    "jest"
   ],
-  "extends": ["airbnb-base", "prettier", "plugin:functional/lite"],
+  "extends": ["airbnb-base", "prettier", "plugin:functional/lite", "plugin:jest/recommended"],
   "parserOptions": {
     "ecmaVersion": 12,
     "sourceType": "module"
