--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "restart": "npm run clean && npm run build && npm run start",
     "restart:es6": "npm run clean && npm run start:es6",
     "dev": "nodemon --ignore dist/ --exec npm run restart",
-    "dev:light": "nodemon --ignore dist --exec npm run restart:es6"
+    "dev:light": "nodemon --ignore dist --exec npm run restart:es6",
+    "test": "jest src",
+    "coverage": "npm run test -- --coverage"
   },
   "keywords": [
     "express",
@@ -38,7 +40,9 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-functional": "^3.5.0",
     "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jest": "^24.4.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "jest": "^27.0.6",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2"
