--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,7 @@
 {
   "env": {
     "es2021": true,
-    "node": true,
-    "jest/global": true
+    "node": true
   },
   "plugins": [
     "prettier",
