--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "commit": "cz",
     "start": "node dist/index.js",
     "start:es6": "babel-node src/index.js",
     "lint": "eslint src/**/*js",
@@ -36,6 +37,8 @@
     "@babel/node": "^7.14.9",
     "@babel/preset-env": "^7.14.8",
     "@babel/register": "^7.14.5",
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "^3.2.0",
     "eslint": "^7.31.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -48,5 +51,10 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
