build(package.json): modify scripts

--- a/package.json
+++ b/package.json
@@ -4,21 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "validate": "npm-run-all --parallel lint test",
     "commit": "cz",
-    "start": "node dist/index.js",
-    "start:es6": "babel-node src/index.js",
+    "clean": "rimraf dist .cache",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
     "lint": "npm run format && eslint src/**/*js",
+    "start": "babel-node src/index.js",
     "build": "babel src --out-dir dist",
-    "clean": "rimraf dist .cache",
-    "restart": "npm run clean && npm run build && npm run start",
-    "restart:es6": "npm run clean && npm run start:es6",
-    "dev": "nodemon --ignore dist/ --exec npm run restart",
-    "dev:light": "nodemon --ignore dist --exec npm run restart:es6",
+    "start:build": "npm run clean && npm run build && node dist/index.js",
+    "dev:build": "nodemon --ignore dist/ --exec npm run start:build",
+    "dev": "nodemon --ignore dist --exec npm run start",
     "test": "jest src",
     "test:watch": "npm run test -- --watch",
-    "coverage": "npm run test -- --coverage",
-    "validate": "npm-run-all --parallel lint test"
+    "test:coverage": "npm run test -- --coverage",
+    "test:all": "npm run test -- --watch --coverage"
   },
   "keywords": [
     "express",
