--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test": "jest src",
     "test:watch": "npm run test -- --watch",
     "test:coverage": "npm run test -- --coverage",
-    "test:all": "npm run test -- --watch --coverage"
+    "test:all": "npm run test -- --watch --coverage",
+    "ci": "npm i && npm run build --if-present && npm run test"
   },
   "keywords": [
     "express",
