--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:watch": "npm run test -- --watch",
     "test:coverage": "npm run test -- --coverage",
     "test:all": "npm run test -- --watch --coverage",
-    "ci": "npm i && npm run build --if-present && npm run test"
+    "ci": "rimraf node_modules && npm i && npm run build --if-present && npm run test"
   },
   "keywords": [
     "express",
