--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:watch": "npm run test -- --watch",
     "test:coverage": "npm run test -- --coverage",
     "test:all": "npm run test -- --watch --coverage",
-    "ci": "rimraf node_modules && npm i && npm run build --if-present && npm run test"
+    "ci": "rimraf node_modules && npm i && npm run build --if-present && npm run test",
+    "release": "semantic-release --branches main"
   },
   "keywords": [
     "express",
@@ -64,5 +65,10 @@
       "pre-commit": "npm run validate",
       "commit-msg": "validate-commit-msg"
     }
+  },
+  "release": {
+    "branches": [
+      "main"
+    ]
   }
 }
