--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@babel/cli": "^7.14.8",
     "@babel/core": "^7.14.8",
     "@babel/node": "^7.14.9",
+    "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.14.8",
     "@babel/register": "^7.14.5",
     "commitizen": "^4.2.4",
