test(app.js): add test for GET / and POST /

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,5 +14,9 @@
     "sourceType": "module"
   },
   "rules": {
+    "jest/expect-expect": [
+      1,
+      {"assertFunctionNames": ["expect", "request"]}
+    ]
   }
 }
