--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start:build": "npm run clean && npm run build && node dist/index.js",
     "dev:build": "nodemon --ignore dist/ --exec npm run start:build",
     "dev": "nodemon --ignore dist --exec npm run start",
-    "test": "jest src",
+    "test": "jest src/",
     "test:watch": "npm run test -- --watch",
     "test:coverage": "npm run test -- --coverage",
     "test:all": "npm run test -- --watch --coverage",
@@ -56,6 +56,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
+    "supertest": "^6.1.4",
     "validate-commit-msg": "^2.14.0"
   },
   "config": {
